# EEG-Project

./: main.py  pyproject.toml
