[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_EEG-Project"
version = "0.1.0"

[tool.poetry.dependencies]
pandas = "^1.3.5"
python = "^3.8"
[tool.poetry.dev-dependencies]


